# sj-peer

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  api_version.cpp  api_version.h  build.cmake  protocol_version.cpp  protocol_version.h  scramjet_peer.cpp
.github/workflows/: install-deps.sh  main.yml
examples/: CMakeLists.txt  add_state.cpp
lib/: CMakeLists.txt
lib/scramjet/: error_code.hpp  function_type.h  jet_connection.cpp  jet_connection.hpp  jet_peer.cpp  jet_peer.hpp  message_type.hpp  protocol_version.cpp  protocol_version.hpp  socket_jet_connection.cpp  socket_jet_connection.hpp
